--- a/packer-main/Jenkinsfile
+++ b/packer-main/Jenkinsfile
@@ -25,8 +25,9 @@ pipeline {
                         secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
                     ]
                 ]) {
-                    sh "packer init aws-ami-v1.pkr.hcl"
-                    sh "packer build aws-ami-v1.pkr.hcl"
+                    sh "pwd"
+                    sh "packer init ./packer-main/aws-ami-v1.pkr.hcl"
+                    sh "packer build ./packer-main/aws-ami-v1.pkr.hcl"
                 }
             }
         }
